# stellar-brl-corridor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
anchor-platform/: .gitignore  README.md  docker-compose.example.yml  env.example
anchor-platform/config/: sep1-stellar.toml  sep1-stellar.toml.template  sep38-assets.yaml
anchor-platform/examples/: sep38-info.json  sep38-prices.json  sep38-quote.json
anchor-platform/examples/live/: sep38-live-capture.txt  stellar.toml.served
apps/dashboard/: README.md
apps/partner-console/: README.md
contracts/card-collateral/: Cargo.toml  README.md
contracts/card-collateral-poc/: Cargo.toml  README.md
contracts/card-collateral-poc/src/: lib.rs  test.rs
contracts/card-collateral/src/: lib.rs  test.rs
contracts/delay-module/: Cargo.toml
contracts/delay-module/src/: lib.rs  test.rs
contracts/fx-rate-lock/: Cargo.toml  README.md
contracts/fx-rate-lock/src/: lib.rs  test.rs
contracts/partner-attribution/: Cargo.toml  README.md
contracts/partner-attribution/src/: lib.rs  test.rs
deployments/: testnet-demo.json  testnet.json
docs/: ANCHOR-PLATFORM.md  DEMO.md  PROVENANCE.md  README.md  REVIEWERS.md  grant.md  sep-cap-coverage.md
docs/architecture/: README.md  arch-l1.d2  arch-l1.mermaid  arch-l2.d2  arch-l2.mermaid  arch-l3-card-auth.d2  arch-l3-card-auth.mermaid  arch-l3-onboarding.d2  arch-l3-onboarding.mermaid  arch-l3-sep31-flow.d2  arch-l3-sep31-flow.mermaid  delay-module.md
docs/media/: demo.tape  sdk-live.tape
indexer/: README.md  package-lock.json  package.json  schema.sql  tsconfig.json
indexer/src/: index.ts
scripts/: check_docs.sh  demo_testnet.sh  deploy_testnet.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/bleu_corridor/: __init__.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/examples/: read-live-testnet.ts
sdk/typescript/src/: contracts.ts  index.ts
