[project]
name = "bleu-stellar-brl-corridor"
version = "0.0.1"
description = "Python SDK for Bleu's BRL/PIX corridor on Stellar (Anchor Platform + SEP-38 rate-lock + partner attribution)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Bleu LTDA", email = "hello@bleu.builders" }]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords = ["stellar", "soroban", "sep-31", "sep-38", "pix", "brl", "anchor-platform"]

[project.urls]
Homepage = "https://bleu.builders"
Repository = "https://github.com/bleu/stellar-brl-corridor"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bleu_corridor"]
